# PyCVDRisk

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  BUILD_README.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  LICENSE.txt  Makefile  PROJECT_STATUS.md  README.md  README.rst  build.py  build_script.py  calc.ipynb  cvdrisk.py  debug_globorisk.py  main.py  pyproject.toml  release.py  setup.cfg  setup.py  test.py  test_globorisk_validation.py  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: build-wheels.yml  ci.yml  release.yml
benchmarks/: benchmark_models.py
calcs/score2/: SCORE2-HR.json  score2.py
calcs/score2op/: SCORE2OP-HR.json  score2op.py
calcs/who/: who.py
calcs/who/mena/: who-mena.json
calcs/who/tables/mena/: mena.json
data/: edge_case_patients.csv  edge_case_patients.json  fake_patients.csv  fake_patients.json
data/reference/: README.md
demo/: README.md  requirements.txt  streamlit_app.py
demo/.streamlit/: config.toml
docs/: conf.py  index.rst  installation.rst  quickstart.rst
docs/api/: core.rst  index.rst  models.rst
examples/: README.md  generate_edge_case_patients.py  generate_fake_patients.py  score2_example.py  validate_edge_cases.py  validate_models_with_fake_data.py
notebooks/: README.md
notebooks/ascvd/: ASCVD_Example.ipynb
notebooks/framingham/: Framingham_Example.ipynb
notebooks/globorisk/: Globorisk_Example.ipynb
notebooks/qrisk3/: QRISK3_Example.ipynb
notebooks/score2/: SCORE2_Example.ipynb
notebooks/smart2/: SMART2_Example.ipynb
notebooks/who/: WHO_Example.ipynb
src/cvd_risk/: __init__.py
src/cvd_risk/core/: __init__.py  base.py  validation.py
src/cvd_risk/models/: __init__.py
src/cvd_risk/models/aric_update/: __init__.py  aric_update.py
src/cvd_risk/models/ascvd/: ascvd.py
src/cvd_risk/models/assign/: README.md  __init__.py  assign.py
src/cvd_risk/models/cambridge/: __init__.py  cambridge.py
src/cvd_risk/models/cardia/: __init__.py  cardia.py
src/cvd_risk/models/cha2ds2_vasc/: __init__.py  cha2ds2_vasc.py
src/cvd_risk/models/chads2/: __init__.py  chads2.py
src/cvd_risk/models/dad_score/: __init__.py  dad_score.py
src/cvd_risk/models/dial2/: README.md  __init__.py  dial2.py
src/cvd_risk/models/dundee/: __init__.py  dundee.py
src/cvd_risk/models/edacs/: README.md  __init__.py  edacs.py
src/cvd_risk/models/epic_norfolk/: __init__.py  epic_norfolk.py
src/cvd_risk/models/finrisk/: __init__.py  finrisk.py
src/cvd_risk/models/framingham/: README.md  __init__.py  framingham.py
src/cvd_risk/models/globorisk/: README.md  __init__.py  globorisk.py
src/cvd_risk/models/grace2/: README.md  __init__.py  grace2.py
src/cvd_risk/models/gulf_race/: __init__.py  gulf_race.py
src/cvd_risk/models/has_bled/: __init__.py  has_bled.py
src/cvd_risk/models/heart/: README.md  __init__.py  heart.py
src/cvd_risk/models/heinz_nixdorf/: __init__.py  heinz_nixdorf.py
src/cvd_risk/models/interheart/: __init__.py  interheart.py
src/cvd_risk/models/jackson_heart/: __init__.py  jackson_heart.py
src/cvd_risk/models/lifecvd2/: README.md  __init__.py  lifecvd2.py  sample.py
src/cvd_risk/models/malaysian_cvd/: __init__.py  malaysian_cvd.py
src/cvd_risk/models/new_zealand/: __init__.py  new_zealand.py
src/cvd_risk/models/predict/: __init__.py  predict.py
src/cvd_risk/utils/: __init__.py
src/cvd_risk/validation/: __init__.py  validation.py
src/cvd_risk_calculator/: __init__.py
src/cvd_risk_calculator/core/: __init__.py  base.py  validation.py
src/cvd_risk_calculator/models/: __init__.py  framingham.py  globorisk.py  qrisk3.py  score2.py
src/cvd_risk_calculator/validation/: __init__.py  validation.py
src/pycvdrisk/: __init__.py  skeleton.py
tests/: __init__.py  conftest.py  test_skeleton.py
tests/unit/: test_base.py  test_heart.py  test_score2.py  test_score2_batch.py  test_validation.py  test_validation_utils.py
website/: .gitignore  .vercelignore  BUILD_SUCCESS.md  DEPLOYMENT.md  NEXT_STEPS.md  QUICK_START.md  README.md  VERCEL_FIX.md  next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
website/components/: Navigation.tsx
website/pages/: _document.tsx  index.tsx
website/styles/: globals.css
(+75 files in other folders)
